src/test/ui/issues/issue-74539.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-74539.rs:9:13
   |
LL |             x
   |             ^ help: a local variable with a similar name exists: `e`

error: `x @` is not allowed in a tuple struct
  --> $DIR/issue-74539.rs:8:14
   |
LL |         E::A(x @ ..) => {
   |              ^^^^^^ this is only allowed in slice patterns
   |
   = help: remove this and bind each tuple field independently
help: if you don't need to use the contents of x, discard the tuple's remaining fields
   |
LL |         E::A(..) => {
   |              ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
